--- a/src/components/layouts/FooterNav.module.scss
+++ b/src/components/layouts/FooterNav.module.scss
@@ -1,4 +1,5 @@
 .footer {
+	display: none;
 	position: fixed;
 	bottom: 0;
 	width: 100%;
@@ -20,5 +21,9 @@
 
 	&.show {
 		bottom: 0;
+	}
+
+	@include touch {
+		display: block;
 	}
 }
