--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,5 +9,11 @@
 }
 
 .contentWrapper {
-	padding-bottom: $footer-height;
+	padding-left: $sidenav-width;
+	padding-bottom: 0;
+
+	@include touch {
+		padding-bottom: $footer-height;
+		padding-left: 0;
+	}
 }
