finish basic functionality

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -17,3 +17,9 @@
 		padding-left: 0;
 	}
 }
+
+// #filter-button::after {
+// 	font-family: sans-serif;
+// 	content: "▼";
+// 	padding-left: 0.5em;
+// }
