Style and performance improvements

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,10 +1,10 @@
 // Override bulma variables here
 $primary: #e9fae3;
-$info: #b9d4fb;
+$info: #8cb9f8;
 $success: #dee8d5;
 $warning: #da627d;
 $danger: #da627d;
-$link: #b9d4fb;
+$link: #b95169;
 
 // Import Bulma
 @import "~bulma/bulma";
