--- a/src/components/layouts/NavItem.module.scss
+++ b/src/components/layouts/NavItem.module.scss
@@ -5,7 +5,7 @@
 	flex-direction: column;
 	height: 100%;
 	padding: 0 1rem;
-	color: #000000;
+	color: #f7f7f7;
 	text-decoration: none;
 	font-size: 1.5rem;
 	cursor: pointer;
