--- a/src/components/layouts/SideMenu.module.scss
+++ b/src/components/layouts/SideMenu.module.scss
@@ -5,6 +5,8 @@
 	left: 0;
 	width: $sidenav-width;
 	padding: 1em;
+	bottom: 0;
+	border-right: 1px solid #acacac;
 
 	@include touch {
 		display: none;
