--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,7 +6,7 @@ $footer-background-color: 22 114 132;
 $sidenav-width: 15rem;
 
 // Colors:
-$primary: #c8f3ba;
+$primary: #aced97;
 $info: #8cb9f8;
 $highlight: #dee8d5;
 $accent: #da627d;
