Fixed token grabbing

--- a/src/components/carousel/ListCarousel.module.scss
+++ b/src/components/carousel/ListCarousel.module.scss
@@ -1,8 +1,9 @@
 .containerButton {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 .space {
-    margin: 3rem;
+	margin-top: 3rem;
+	margin-bottom: 3rem;
 }
