--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,5 @@
 // Imports
-@import url("https://fonts.googleapis.com/css2?family=Lilita+One&display=swap");
+@import "~@fontsource/lilita-one/index.css";
 
 // Override bulma variables here
 $primary: #e9fae3;
@@ -21,7 +21,6 @@ $title-family: "Lilita One", serif;
 @import "~bulma/bulma";
 @import "~bulma/bulma.sass";
 @import "~bulma/sass/utilities/initial-variables";
-//@import "~bulma/sass/utilities/derived-variables";
 
 @import "~bulma/sass/elements/title";
 @import "~bulma/sass/elements/button";
