Code cleanup + some more polish

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,6 +11,10 @@ $info: #8cb9f8;
 $highlight: #dee8d5;
 $accent: #da627d;
 
+$loading: #da627d;
+$loading-25: #aa4b6056;
+$loading-25-opaque: #81384800;
+
 .text-primary {
 	color: #6a788a !important;
 }
